--- a/langs/fble.txt
+++ b/langs/fble.txt
@@ -1285,3 +1285,25 @@ Notes:
   For example, I'd like to use it to describe a list of Maybe@<Symbol@>, but
   you can't, because that has structure. Why didn't we go with reading values
   that are currently in scope?
+
+  Proposal: |'foo.bar' is desugared to [f, o, o, '.', b, a, r]. Ditch the
+  union type, take the values from the current context, and desugar directly
+  to a list literal. Now, in practice, you can do things like:
+     { Chars; Str(|"hello!"); }
+
+  Downside:
+   * 'Str' has to be more than 1 letter, otherwise we conflict.  Presumably
+     not too bad. Or do: Str({Chars; |"hello!";})
+   * If some var 'x' is in scope that you don't intend to be used in the
+     literal, but you accidentally use 'x', the compiler will be fine with it
+     (if the types matches).
+
+  Another option: |'foo.bar' desugars to f, o, o, '.', b, a, r, and could be
+  used to pass multiple arguments of fixed length to a function? Because I
+  often wish I could use literals for fixed length data, where the compiler
+  yells at me if I give the wrong length. e.g. for specifying an initial
+  sudoku board, where we give a row that must be 9 characters.
+
+  And while I'm complaining, Foo([...]) is pretty awkward. I wish I could do
+  Foo(...) instead.
+  
