--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,6 @@
 * [lang] redo syntax for literals
+* [test] Fix infinite recursion in TypeEquals.
 * Replace TicTacToe MemoTable with a generic Map from Data to T@.
-  - Minimize test case leading to recursive TypeEquals for Map.fble.
-  - Fix infinite recursion in TypeEquals.
   - Implement ToData for Board@.
 * Implement Game of Life.
 * [clean] Clean up tracking of time in the compiler.
