Separate Blocks from NewInstrBlock and exit.
Instead of implicitly entering a profile block in NewInstrBlock and exiting
one when exit is true for Compile, separate them completely. There's no need
to have autoexit behavior for managing the lexically scoped profile block
stack.

This fixes some ENTER/EXIT block mismatches.

--- a/TODO.txt
+++ b/TODO.txt
@@ -1,3 +1,6 @@
+* Remove excess !!! in block names.
+* Remove / 1000 in profile report.
+* Pick a better top level block name than __main. Maybe ""?
 * [lang] redo syntax for literals
 * [test] Fix infinite recursion in TypeEquals.
 * Replace TicTacToe MemoTable with a generic Map from Data to T@.
