--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,5 @@
 * Remove excess !!! in block names.
+* Remove spurious calls to enter block 0 in fble/eval.c
 * [lang] redo syntax for literals
 * [test] Fix infinite recursion in TypeEquals.
 * Replace TicTacToe MemoTable with a generic Map from Data to T@.
