--- a/TODO.txt
+++ b/TODO.txt
@@ -1,7 +1,7 @@
 Profiling Cleanup:
 * profile API cleanup
- - Remove ProcessProfile.
  - Rename FbleCallGraph to FbleProfile.
+ - Rename DumpProfile to ProfileReport.
 * Make sure we've tested recursive calls with auto exit.
 * Move code coverage and time correlation to a single section in the profile.
 * Document the interesting parts of the implementation
