--- a/TODO.txt
+++ b/TODO.txt
@@ -1,5 +1,7 @@
 Type System Rewrite:
 * Fix memory leaks exhibited by failing tests.
+* Double check that Subst doesn't do any simplifications or poly apply, it's
+  just a syntactic substitution.
 * Implement FbleNormalizes check on let rec.
 * Add support for f == (\x -> f x) to TypeEquals
   - It should fabricate an abstract variable and test that the left hand side
