--- a/TODO.txt
+++ b/TODO.txt
@@ -1,4 +1,10 @@
+* Change literal syntax to take a struct value instead of a type for the
+  literal type.
+* Change modules to be absolute or relative path, not search path.
+
 Miscellaneous:
+* Remove struct import syntax in favor of let or a new multi-import format.
+* Add support for abstract types?
 * Implement Game of Life.
   - Add Map%.For function.
   - Implement step 1 of GameOfLife%.Step.
@@ -94,6 +100,9 @@ Snake:
 Md5:
 * Remove Bits cls implementation, as it is no longer used and not very useful.
 * Improve performance of Bit2XN.add, though it's not obvious how.
+
+Table Tennis:
+* Render a static 3D table tennis scene.
 
 Sudoku:
 
